...
            Spacer(modifier = Modifier.padding(16.dp))

            OutlinedTextField(
                value = text,
                onValueChange = { text = it },
                isError = state.error.isNotEmpty(),
                modifier = Modifier.testTag("pinInput"),
                colors = TextFieldDefaults.outlinedTextFieldColors(
                    unfocusedBorderColor = MaterialTheme.colors.primary,
                    textColor = MaterialTheme.colors.primary
                )
            )
            Spacer(modifier = Modifier.padding(16.dp))
...
