...

@Composable
fun ListContent(
    sites: LazyPagingItems<Site>,
    onClick: (String) -> Unit)
{
    Box(modifier = Modifier.semantics { contentDescription = "list" }) {
        LazyColumn {
            items(items = sites, key = { it.id }) { site ->
                SiteCard(site = site!!, onClick = onClick)
            }
        }
    }
...
